--- a/WSTowers/WSTowers.Android/WSTowers.Android.csproj
+++ b/WSTowers/WSTowers.Android/WSTowers.Android.csproj
@@ -85,7 +85,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LogoSaoPaulo.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WSTowers\WSTowers.csproj">
       <Project>{708B4D64-B6C4-4F64-BC57-694CE43936F6}</Project>
@@ -94,6 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\WS_Towers.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LogoGoias.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
